--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print a welcone message
+      - name: Print a welcome message
         run: echo "Welcome to our first GitHub Actions Workflow!"
+
+      - name: Checkout repository
+        uses: actions/checkout@v5.0.0
+
+      - name: List repository files
+        run: ls -la
+        
