fixes the Test workflow

--- a/.github/workflows/push-pr.yml
+++ b/.github/workflows/push-pr.yml
@@ -1,9 +1,9 @@
 on:
     push:
-        branch:
+        branches:
             - master
             - "release/**"
-        path:
+        paths:
             - "src/**"
     pull_request:
         branches:
